{
    "name": "WeaponAction",
    "maps": [
        {
            "name": "Weapon",
            "id": "e14b73f8-289b-4e73-9bec-641a3d460276",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "e071ae70-8ba5-437d-b89a-38123b08a56a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56f4402f-20e6-4d52-9d2a-d7e65501e0c2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KM",
            "bindingGroup": "KM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}